Allow bootnodes to be configured with ENRs instead of Enodes
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>